manifests/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eliopeli-staging-svc
  namespace: eliopeli
  labels:
    app: eliopeli-staging
spec:
  selector:
    app: eliopeli-staging
  ports:
    - name: http
      port: 80         
      targetPort: 80
  type: ClusterIP
