manifests/staging/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: eliopeli-route-staging
  namespace: eliopeli
  labels:
    app: eliopeli-staging
    type: external
spec:
  host: eliopeli-staging.ext.ocp-test-0.k8s.it.helsinki.fi 
  port:
    targetPort: 80
  to:
    kind: Service
    name: eliopeli-staging-svc
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
